feat: add coinex provider
